[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Sprite/Moving/Pufferfish.png" type="Texture" id=1]
[ext_resource path="res://Element/pufferfish.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 128.0

[sub_resource type="Animation" id=2]
resource_name = "growing-once"
length = 0.5
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0.5, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.5 )
}

[sub_resource type="Animation" id=4]
resource_name = "idle-loop"
length = 10.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 2.5, 5, 8, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 10.0, 25.0, -10.0, -8.0, 0.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1, 2, 4, 7, 10 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 1, 1 ), Vector2( -1, 1 ), Vector2( -0.5, -2 ), Vector2( 1, -1 ), Vector2( 0, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "shrinking-once"
tracks/0/type = "bezier"
tracks/0/path = NodePath("Sprite:scale:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Sprite:scale:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0, 0.5, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 1 )
}

[sub_resource type="CircleShape2D" id=5]
radius = 24.0

[node name="PufferfishArea2D" type="Area2D"]
script = ExtResource( 2 )

[node name="PlayerDetect" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/growing-once = SubResource( 2 )
anims/idle-loop = SubResource( 4 )
anims/shrinking-once = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="BumperDetect" type="Area2D" parent="Sprite"]

[node name="PlayerBumper" type="CollisionShape2D" parent="Sprite/BumperDetect"]
scale = Vector2( 1, 1 )
shape = SubResource( 5 )
[connection signal="area_entered" from="." to="." method="_on_Pufferfish2DArea_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_Pufferfish2DArea_area_exited"]
[connection signal="body_entered" from="." to="." method="_on_Pufferfish2DArea_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_Pufferfish2DArea_body_exited"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="body_entered" from="Sprite/BumperDetect" to="." method="_on_BumperDetect_body_entered"]
[connection signal="body_exited" from="Sprite/BumperDetect" to="." method="_on_BumperDetect_body_exited"]
